--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -100,7 +100,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: steps.check.outputs.skip != 'true'
         with:
-          name: ${{ matrix.dest }}   # Specs / Runbooks / Procedures / Testing
+          name: ${{ matrix.dest }}-${{ github.run_id }}   # Specs / Runbooks / Procedures / Testing
           path: |
             ${{ matrix.base }}_v${{ steps.ver.outputs.v }}.docx
             ${{ matrix.base }}_v${{ steps.ver.outputs.v }}.pdf
